# ChangeLog for dev-qt/qt-creator
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/ChangeLog,v 1.27 2013/12/21 17:17:28 ago Exp $

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
  Stable for ppc, wrt bug #486468

*qt-creator-3.0.0 (19 Dec 2013)

  19 Dec 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.0.ebuild,
  -qt-creator-3.0.0_rc1.ebuild:
  Version bump.

*qt-creator-3.0.0_rc1 (29 Nov 2013)

  29 Nov 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.0_rc1.ebuild,
  -qt-creator-3.0.0_beta.ebuild:
  Version bump.

*qt-creator-3.0.0_beta (23 Oct 2013)

  23 Oct 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.0_beta.ebuild,
  metadata.xml:
  Version bump.

  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
  Stable for x86, wrt bug #486468

  29 Sep 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
  Stable for amd64, wrt bug #486468

  29 Sep 2013; Davide Pesavento <pesa@gentoo.org> -qt-creator-2.5.2.ebuild,
  -qt-creator-2.7.2.ebuild, -qt-creator-2.8.0.ebuild, metadata.xml:
  Cleanup old versions.

*qt-creator-2.8.1 (29 Aug 2013)

  29 Aug 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-2.8.1.ebuild:
  Version bump.

  15 Aug 2013; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Remove hwoarang from metadata, ack'ed by him on IRC.

  15 Aug 2013; Davide Pesavento <pesa@gentoo.org> qt-creator-2.7.0.ebuild,
  qt-creator-2.7.2.ebuild, qt-creator-2.8.0.ebuild:
  dev-libs/botan must be built with USE="threads", thanks to Bjoern Thorwirth in
  bug 480992.

  09 Aug 2013; Michael Weber <xmw@gentoo.org> metadata.xml:
  global use flag "git"

*qt-creator-2.7.2 (27 Jul 2013)
*qt-creator-2.8.0 (27 Jul 2013)

  27 Jul 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-2.7.2.ebuild,
  +qt-creator-2.8.0.ebuild, -qt-creator-2.6.2.ebuild, -qt-creator-2.7.1.ebuild,
  -qt-creator-2.8.0_rc.ebuild: