@@ -1,28 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST qt-creator-2.7.0-src.tar.gz 22503776 SHA256 c8d05b65661639809df7815837e8c7d42980028dff1e21dc518049d837b3d6fa SHA512 bb4b941c8acb3572450c3eb8a70807480cbe1f23b1eb7150fcbac5b766c5a109567822a3f2644164f894f736a2d8fcc972d013a9f475ae72f97609afc98b89fc WHIRLPOOL ff660ac5283ae788843e0b812e68ca950b62bfd1507c1952d9bee0a3397ef300625dc3bf4207a773d81c1e2483533213365d2d0715b0a31f20ec3ca11fb56285
 DIST qt-creator-2.8.1-src.tar.gz 24381282 SHA256 d5ae007a297a4288d0e95fd605edbfb8aee80f6788c7a6cfb9cb297f50c364b9 SHA512 954b0caa9a4c6b7debf62562f3c8f1b4edee13488867208e7d41544b244a111024f2c4c144e4b44e98973cf1d7b5885c13c0b6996ade58e204887eb13bb999cb WHIRLPOOL 1aa5018e19315bd2528580ffa388ff17d96666747e4abad28ea4bcd38315e6efc66379cdda90cb32c17dd1631d0ebedff422e53ee0b9b3c40d7a5766ff4dd9b4
 DIST qt-creator-opensource-src-3.0.0.tar.gz 24998283 SHA256 db14c3706803917c8fb8aa578a67e8d5e2bcfabeba968f7669141df795410d99 SHA512 0dead4341c2747b9f06832921c9d4b2cf585a02387b7aef266d2854d1db9b191bdb8f53af338fea67273b9e46a9b9830a63f56b14ff0b7e3a6ea609e02de6e97 WHIRLPOOL 4172ffa45b21323c1129cc9ffe1ea428d5c0af68c50032d84ae07aeb3714d0817099596efd6a7e3efa6337b84d8c2a9cfd356b310244d4f4f825258459f0e428
-EBUILD qt-creator-2.7.0.ebuild 3017 SHA256 c69697f4ce1e6fe201e9c26d72cd1ce1048377838cc822a5f319a792eb3248c4 SHA512 2eeeac2625f41794191f166aa2a2ed54b1b62163aa6121190d7a1a7431631aafaa4cdada357e3b8b4a3d66a780d08c8ff7dbc760c7e74c127d0993b972e1ac98 WHIRLPOOL 656be64874ee3cca71faf72e6abc900afd69f69c828b2a70b1a6e92aa5f231bfa14dab13ffb28f7eb73a9e96a1388d5473012761402d0a88203bb71082b37a05
 EBUILD qt-creator-2.8.1.ebuild 3252 SHA256 28cb33cdf81c8555ac52702c815b6b2eb8967c56c50e4e9ae2c5ebac7c99d5f8 SHA512 5cdc91c9530984bf16c266809a09be7d3b0d5f7195f20091d444575d344f37cb06828f67eb3a7b3cfbb7103d0e879980893fed0a5cae722f8c5beea90f7c4376 WHIRLPOOL 87f87896456df7fa9c054813db4e8aa46dd87bf58221103986ebcb667ec491ddb980f0706632f13a84b35f0ec52714ed46f8018d49e87950ee01f0b355f47f4d
 EBUILD qt-creator-3.0.0.ebuild 3305 SHA256 65262a203a9ae740383d51c82392cda2b30dee88a5809ee65ea9f3a6179b1152 SHA512 95c955999997bf8bc259b95bb2879ca1bdb0132b45a635dabc2ec2273f641da1f3bf613c840e3b0bdb1d17d20e27d03bbacd759301a3645e3aea068eb06f807f WHIRLPOOL 0049c63244bfc99dca83f25d4c8852efebffdb2d9adc91517fb39f5dc36c2a6d2e403f56439b8dbd7a023e9f50fb6f0a308d8a8b1d0fe78c0f0f13042ac29174
-MISC ChangeLog 25408 SHA256 123a008a919894171824816c6d229f4c744650a05bed67557f254ae71101beaa SHA512 3322fccf02fa42c32fd44c372b11b04120071f706e160919902aa927004d8d68ab62a257304b740f96cb01a533243ea3b64e77ffc7dcbbc7aa4728b723285f0f WHIRLPOOL 94ed64308ad9c70678d1c9200517bfb679125794bb45677157cdc4bafc48655018bb28ce8c40edd4c58a6d1efbf9593a2963d2605a3bcd19ef55d01c559ebee6
+MISC ChangeLog 25492 SHA256 05933c6c054a7bfbd04fb89755a93d03660082dd7b72978395235c2c6d33edb4 SHA512 22f5121043fb124ebd83ec7614d918eff19a31bccc2b1055cf5fc8ac6c63b6cc78ba1bd756925a0bd18c0c23231399d092dfff9ea5d4047249deea7eb2113bfe WHIRLPOOL 2e5b574752d78cdc64a0161ffab6c4e61d11f533a9bf0f7a73b05dd8082f06d34de7e57e30cb9295cb4fa68e9831a8bb9f59e429b94ccdcbb6860ff4a4b5e2fe
 MISC metadata.xml 1442 SHA256 a477b02330f2e3b6192c301c6deb9349c247ab75d278db4da5d6fe2493fcde38 SHA512 16f2d618be72bd29f5966945d5760916b57cd7951bf971a065e3c027d4f6db907bf06c3ad1f564a77292358fbbae394acd941ab7ef95adea3268c5202f8abf11 WHIRLPOOL 77cdd75d3b6828a8b8d2c4847362994a721a37d5bd0c47ed9079cef8bbd16b376fc21630cb7ec86d8a73cae8318d229f3b7ddaa1a547c6518ec28edbeb15eed3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJStcw3AAoJELp701BxlEWfrQYP/3Oefo/m/GMCI2w4ujB4rrHT
-H3+4+SfVACLqnX1FFr7hGjkzi5SyI/RmNPi/0EUHKYsGVSbw8xARRXIUaghQviJ8
-OC3gbVQasPmUShJRq890VxD+A7HLW8l+RiGy3SOAZqb3lLxAWYAGSsaRKCr+edFo
-f31nuLcIpADctwODbzrv51/zcHbUEUx6oJDWomvGTXLwYMNiBww6aaf0Ibxq68Iu
-qtdIMdZxr8yR6h52hccn0ukgnkcWtEMP4kn9WgSV8hAX1tSeYv5Xv6DCqGTbjoDh
-WmpfRvh+0agAvOBbh0761tpGDg4VZny2V2mhSRiQA67pQp1nZzRNT+XEEoTbcJDO
-6Nnpd712RDj6jWXfnrfzwTt5gUPzm0XLYFxW3qadLrmeN9VH+rtwiJx40bL4cIbM
-j4SaOD3i5NY4ou4HnXbh8IfE77orL2BoDZlXxZRQx/Wv/NK1vg1dgNc2Dvd/iTLd
-6ZaLlB5qIQnluDKKNyUlQpaiyLrv7AjJ0/2adSuQK+0ES0R8DNXsdJDQgCf1S7nO
-3bgQ+XnQmJO1HxCzPQD990eoGJmP9u7F143+zwi4P6yA367WbKfoSPkuraZgqrww
-Sc5uWWIj5BdhCrLn45on/Uu61sSClPLu4v0crOdErXPeE8MuAnY6yyulZkQFajn/
-rWuJOf4hllcVt4w6hR3Y
-=mSx1
+iQIcBAEBCAAGBQJSte9/AAoJENXLsxwXqFxywAMP/2vti9mBoVRdUE0p0Iu+s/pV
+7IOQSygY30jl/caT/JBDJ5t7RqnZmJP7TjNTHp8888V4nT40CaNZLtp7jnHk6iBi
+q0nGMuB0yAy5IOLIVJthlNeAu69u4TnBftFx16G4uRg/7ARM+mWfdXxmrmIjPmxB
+szzDn7iyOJo8t3ghZojS6o73F5WuyBqpDZcddOF599IiMhIkRC1nW+xS4wByV649
+Fru/PhPRIPdBOHj6790z5M/eCw6ZYhdHQysenohjz1K83rRNiUhvgLPjTOR26sZY
+Sn6MjjfFp32OYtYnVFZf5B59sYtd5fDEH8uutf4LtW54GSVNgWbTlmiFYAG261Cv
+pe0r87zvdD5CNgaA7JmY1eiXjd5b1ecs+qUcPh3MwOqeTt/LY76KDl0O6j69Pd9K
+1+/fTS9EHmuf7QRfWhDXDsaFy/GomGk/BYoPsKDzfPLmNHQEpogXo9MaTsmbenc8
+f73bGnbOyigtr1weOC9TrD+gssOvGF/uNhKUzx1ir1vyu2v7FGdBsCVvKDxi4Agk
+BlKUbH5AbmeSPcJDJVgaFANMCPEllYk+1/ahPED9KHCDdAAMWocNEDtKSC0rAg4C
+Gt7TPf0K/lPJ7R8r5wTALp6sIFI23BhgJA3V07Llnz2PLIjoTrwoUH3iCt267/tm
+NtJgWnAmWz49zF9oYPoa
+=T9oo
 -----END PGP SIGNATURE-----
