@@ -1,6 +1,9 @@
 # ChangeLog for dev-qt/qt-creator
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/ChangeLog,v 1.27 2013/12/21 17:17:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/ChangeLog,v 1.28 2013/12/21 19:43:45 pesa Exp $
+
+  21 Dec 2013; Davide Pesavento <pesa@gentoo.org> -qt-creator-2.7.0.ebuild:
+  old
 
   21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
   Stable for ppc, wrt bug #486468
